add some changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
-name: audio_trimmer
-description: A new Flutter plugin.
-version: 0.0.1
-author:
-homepage:
+name: audio_trim
+description: An audio_trimmer plugin.
+version: 0.0.2
+homepage: https://github.com/techhuntdevelopers/audio_trimmer
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
