--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  audio_trimmer:
+  audio_trim:
     # When depending on this package from a real application you should use:
     #   audio_trimmer: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
