--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,4 +1,4 @@
-name: audio_trim
+name: audio_trimmer
 description: An audio_trim plugin.
 
 # The following line prevents the package from being accidentally published to
@@ -13,15 +13,8 @@ dependencies:
     sdk: flutter
 
   audio_trim:
-    # When depending on this package from a real application you should use:
-    #   audio_trimmer: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
     path: ../
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
