--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.techhuntdevelopers.audio_trimmer">
-</manifest>
+<manifest package="com.techhuntdevelopers.audio_trimmer"></manifest>
